# haisi-mpp_ive-md_svp

./: .gitignore  CMakeLists.txt  readme.org
data/: configure.json  svp_configure.json
deploy/: copy_configure.py  copyfile.py
deploy/lib/npu/: libascend_protobuf.so.3.13.0.0
deploy/mpp_ive-md_svp/: S81app  copy_to_win.sh  run.sh
deploy/mpp_ive-md_svp/data/: configure_4k_nnn.json
examples/: bac.cpp  md4k_yoloThread_merge_rois_async_vdec_vpss_nnn.cpp  md4k_yoloThread_merge_rois_async_vdec_vpss_nnn_with_sky.cpp  md4k_yoloThread_merge_rois_async_vdec_vpss_nnn_with_sky_cpp  md4k_yoloThread_merge_rois_async_vpss_nnn_1chn-1.cpp  md4k_yoloThread_merge_rois_async_vpss_nnn_1chn-1_with_sky.cpp  md4k_yoloThread_merge_rois_async_vpss_nnn_1chn-2.cpp  md4k_yoloThread_merge_rois_async_vpss_nnn_1chn-2_with_sky.cpp  md4k_yoloThread_merge_rois_async_vpss_nnn_1chn-2_with_sky_cpp  md4k_yoloThread_merge_rois_async_vpss_nnn_1chn.cpp  md4k_yoloThread_merge_rois_async_vpss_nnn_2chns.cpp  md4k_yoloThread_merge_rois_async_vpss_nnn_2chns_v2.cpp  md4k_yolo_merge_rois_async_vdec_vpss_nnn.cpp  md_yoloThread_merge_rois_async_vdec_vpss_nnn.cpp  md_yolo_merge_rois.cpp  md_yolo_merge_rois_async.cpp  md_yolo_merge_rois_async_nnn.cpp  md_yolo_merge_rois_async_vdec_vpss.cpp  md_yolo_merge_rois_async_vdec_vpss_nnn.cpp  md_yolo_merge_rois_async_vpss_nnn.cpp  md_yolo_merge_rois_async_vpss_nnn_2chns.cpp  md_yolo_merge_rois_sync_vdec_vpss_nnn.cpp  md_yolo_rois.cpp
include/: ffmpeg_vdec_vpss.hpp  ive_md.hpp  tcp_tools.hpp  utils.hpp  utils_hpp  yolov8_nnn.hpp
src/: ffmpeg_vdec_vpss.cpp  ive_md.cpp  utils.cpp  yolov8_nnn.cpp
src/svp/common/: sample_common_ive.c
test/: test_combine_yuv.cpp  test_half  test_half.cpp  test_half.py  test_md_vpss.cpp  test_merge_rois.cpp  test_merge_rois_cpp  test_split_yuv.cpp  test_vpss_get_chn.cpp  yuv2jpg.py
tools/: debug_dets_on_merged_rois.py  draw_rect_from_csv_data.py  draw_rect_from_csv_data_v2.py  draw_rect_from_csv_data_with_sky.py  draw_rect_from_tcp_data.py  haisi_md.py  haisi_md_yolo-yanshou-with-sky.py  haisi_md_yolo-yanshou-with-sky_yolo.py  haisi_md_yolo-yanshou.py  haisi_md_yolo.py  opencv_onnx_yolo.py  random_select_videos.py  read_merged_rois.py  read_rois.py  yuv2jpg.py
